--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,7 +1,10 @@
 .header {
   margin: 0 auto;
-  padding: 45px 0 36px;
+  /* padding: 45px 0 36px; */
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 @media screen and (max-width: 320px) {
