--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,18 @@
 @import url('./blocks/profile/__container/profile__container.css');
 @import url('./blocks/element/__likes/element__likes.css');
 @import url('./blocks/element/__like-number/element__like-number.css');
+@import url('./blocks/form/__button-submit/form__button-submit.css');
+@import url('./blocks/form/__container/form__container.css');
+@import url('./blocks/form/__input-error/form__input-error.css');
+@import url('./blocks/form/__input/form__input.css');
+@import url('./blocks/form/__link/form__link.css');
+@import url('./blocks/form/__title/form__title.css');
+@import url('./blocks/form/__user/form__user.css');
+@import url('./blocks/popup/_info/popup_info.css');
+@import url('./blocks/popup/__image-status/popup__image-status.css');
+@import url('./blocks/popup/__title/_info/popup__title_info.css');
+@import url('./blocks/header/__container/header__container.css');
+@import url('./blocks/header/__email/header__email.css');
+@import url('./blocks/header/__link/header__link.css');
+@import url('./blocks/header/__link/_exit/header__link_exit.css');
+/* @import url(''); */
